--- a/index.html
+++ b/index.html
@@ -10,24 +10,18 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" type="text/css" href="./app.css">
     <link rel="stylesheet" type="text/css" href="./css/navbar.css">
     <link rel="stylesheet" type="text/css" href="./css/main.css">
     <link rel="stylesheet" type="text/css" href="./css/vendor.css">
     <link rel="stylesheet" type="text/css" href="./css/timeline.css">
-
+    <link rel="stylesheet" type="text/css" href="./css/responsive.css">
     <script src="https://unpkg.com/scrollreveal"></script>
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-
     <!-- icon  -->
     <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
-
-
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -213,7 +207,7 @@
             </div>
         </div>
         <div id="work">
-            <p>Work Experience</p>
+            <p class="title">Work Experience</p>
             <ul id="work-detail">
                 <li>
                     <p>Jan 2024 - Currently</p>
@@ -234,7 +228,7 @@
                             consultations and services. The system includes 4 parties including general administrator,
                             hospital manager, doctors and users. This project uses PHP Laravel9 as BackEnd API, ReactJS
                             as FrontEnd. Also use Docker and Deploy Microsoft Azure .
-                            Demo: <a target="_blank"
+                            <br>Demo: <a target="_blank"
                                 href="https://react-vercel-95yac2b5v-vanmanh-react.vercel.app">https://react-vercel-95yac2b5v-vanmanh-react.vercel.app</a><br>
                             API: <a target="_blank"
                                 href="https://vanmanh.azurewebsites.net">https://vanmanh.azurewebsites.net</a></span>
@@ -250,122 +244,176 @@
                             both web systems for users and admins to manage. The project uses the PHP - Laravel8
                             framework. My job is to fix bugs as well as do tasks and develop features for both users and
                             admins.
-                            Demo: <a target="_blank"
+                            <br>Demo: <a target="_blank"
                                 href="http://nhadatexpress.toolgencode.com">http://nhadatexpress.toolgencode.com</a></span>
                     </p>
                 </li>
             </ul>
         </div>
         <div id="skills">
-            <p id="skills-title">The skills and technology I use</p>
+            <p id="skills-title" class="title">The skills and technology I use</p>
             <ul>
                 <li>
-                    <p><img src="/img/tech/html.png" alt="html.png"></p>
-                    <p>HTML5</p>
+                    <div>
+                        <p><img src="/img/tech/html.png" alt="html.png"></p>
+                        <p>HTML5</p>
+                    </div>
                 </li>
                 <li>
-                    <p><img src="/img/tech/css.png" alt="Skill"></p>
-                    <p>CSS3</p>
+                    <div>
+                        <p><img src="/img/tech/css.png" alt="Skill"></p>
+                        <p>CSS3</p>
+                    </div>
                 </li>
                 <li>
-                    <p><img src="/img/tech/sass.png" alt="Skill"></p>
-                    <p>Sass</p>
+                    <div>
+                        <p><img src="/img/tech/sass.png" alt="Skill"></p>
+                        <p>Sass</p>
+                    </div>
                 </li>
                 <li>
-                    <p><img src="/img/tech/js.png" alt="Skill"></p>
-                    <p>Javascript</p>
+                    <div>
+                        <p><img src="/img/tech/js.png" alt="Skill"></p>
+                        <p>Javascript</p>
+                    </div>
                 </li>
                 <li>
-                    <p><img src="/img/tech/bootstrap.png" alt="Skill"></p>
-                    <p>Bootstrap5</p>
+                    <div>
+                        <p><img src="/img/tech/bootstrap.png" alt="Skill"></p>
+                        <p>Bootstrap5</p>
+                    </div>
                 </li>
                 <li>
-                    <p><img src="/img/tech/jquery.png" alt="Skill"></p>
-                    <p>Jquery</p>
+                    <div>
+                        <p><img src="/img/tech/jquery.png" alt="Skill"></p>
+                        <p>Jquery</p>
+                    </div>
                 </li>
                 <li>
-                    <p><img src="/img/tech/vue.png" alt="Skill"></p>
-                    <p>VueJs3</p>
+                    <div>
+                        <p><img src="/img/tech/vue.png" alt="Skill"></p>
+                        <p>VueJs3</p>
+                    </div>
                 </li>
                 <li>
-                    <p><img src="/img/tech/react.png" alt="Skill"></p>
-                    <p>ReactJs</p>
+                    <div>
+                        <p><img src="/img/tech/react.png" alt="Skill"></p>
+                        <p>ReactJs</p>
+                    </div>
                 </li>
                 <li>
-                    <p><img src="/img/tech/npm.png" alt="Skill"></p>
-                    <p>NPM</p>
+                    <div>
+                        <p><img src="/img/tech/npm.png" alt="Skill"></p>
+                        <p>NPM</p>
+                    </div>
                 </li>
                 <li>
-                    <p><img src="/img/tech/nodejs.png" alt="Skill"></p>
-                    <p>Nodejs</p>
+                    <div>
+                        <p><img src="/img/tech/nodejs.png" alt="Skill"></p>
+                        <p>Nodejs</p>
+                    </div>
                 </li>
                 <li>
-                    <p><img src="/img/tech/mysql.png" alt="Skill"></p>
-                    <p>MySQL</p>
+                    <div>
+                        <p><img src="/img/tech/mysql.png" alt="Skill"></p>
+                        <p>MySQL</p>
+                    </div>
                 </li>
                 <li>
-                    <p><img src="/img/tech/php.png" alt="Skill"></p>
-                    <p>PHP</p>
+                    <div>
+                        <p><img src="/img/tech/php.png" alt="Skill"></p>
+                        <p>PHP</p>
+                    </div>
                 </li>
                 <li>
-                    <p><img src="/img/tech/laravel.png" alt="Skill"></p>
-                    <p>Laravel</p>
+                    <div>
+                        <p><img src="/img/tech/laravel.png" alt="Skill"></p>
+                        <p>Laravel</p>
+                    </div>
                 </li>
                 <li>
-                    <p><img src="/img/tech/composer.png" alt="Skill"></p>
-                    <p>Composer</p>
+                    <div>
+                        <p><img src="/img/tech/composer.png" alt="Skill"></p>
+                        <p>Composer</p>
+                    </div>
                 </li>
                 <li>
-                    <p><img src="/img/tech/postman.png" alt="Skill"></p>
-                    <p>Postman</p>
+                    <div>
+                        <p><img src="/img/tech/postman.png" alt="Skill"></p>
+                        <p>Postman</p>
+                    </div>
                 </li>
                 <li>
-                    <p><img src="/img/tech/git.png" alt="Skill"></p>
-                    <p>Git</p>
+                    <div>
+                        <p><img src="/img/tech/git.png" alt="Skill"></p>
+                        <p>Git</p>
+                    </div>
                 </li>
                 <li>
-                    <p><img src="/img/tech/github.png" alt="Skill"></p>
-                    <p>Github</p>
+                    <div>
+                        <p><img src="/img/tech/github.png" alt="Skill"></p>
+                        <p>Github</p>
+                    </div>
                 </li>
                 <li>
-                    <p><img src="/img/tech/gitlab.png" alt="Skill"></p>
-                    <p>Gitlab</p>
+                    <div>
+                        <p><img src="/img/tech/gitlab.png" alt="Skill"></p>
+                        <p>Gitlab</p>
+                    </div>
                 </li>
                 <li>
-                    <p><img src="/img/tech/docker.png" alt="Skill"></p>
-                    <p>Docker</p>
+                    <div>
+                        <p><img src="/img/tech/docker.png" alt="Skill"></p>
+                        <p>Docker</p>
+                    </div>
                 </li>
                 <li>
-                    <p><img src="/img/tech/azure.png" alt="Skill"></p>
-                    <p>Micro Azure</p>
+                    <div>
+                        <p><img src="/img/tech/azure.png" alt="Skill"></p>
+                        <p>Micro Azure</p>
+                    </div>
                 </li>
                 <li>
-                    <p><img src="/img/tech/google-cloud.png" alt="Skill"></p>
-                    <p>Gg cloud</p>
+                    <div>
+                        <p><img src="/img/tech/google-cloud.png" alt="Skill"></p>
+                        <p>Gg cloud</p>
+                    </div>
                 </li>
                 <li>
-                    <p><img src="/img/tech/webpack.png" alt="Skill"></p>
-                    <p>Webpack</p>
+                    <div>
+                        <p><img src="/img/tech/webpack.png" alt="Skill"></p>
+                        <p>Webpack</p>
+                    </div>
                 </li>
                 <li>
-                    <p><img src="/img/tech/firebase.png" alt="Skill"></p>
-                    <p>Firebase</p>
+                    <div>
+                        <p><img src="/img/tech/firebase.png" alt="Skill"></p>
+                        <p>Firebase</p>
+                    </div>
                 </li>
                 <li>
-                    <p><img src="/img/tech/python.png" alt="Skill"></p>
-                    <p>Python</p>
+                    <div>
+                        <p><img src="/img/tech/python.png" alt="Skill"></p>
+                        <p>Python</p>
+                    </div>
                 </li>
                 <li>
-                    <p><img src="/img/tech/django.png" alt="Skill"></p>
-                    <p>Django</p>
+                    <div>
+                        <p><img src="/img/tech/django.png" alt="Skill"></p>
+                        <p>Django</p>
+                    </div>
                 </li>
                 <li>
-                    <p><img src="/img/tech/anaconda.png" alt="Skill"></p>
-                    <p>Anaconda</p>
+                    <div>
+                        <p><img src="/img/tech/anaconda.png" alt="Skill"></p>
+                        <p>Anaconda</p>
+                    </div>
                 </li>
                 <li>
-                    <p><img src="/img/tech/vscode.png" alt="Skill"></p>
-                    <p>VS Code</p>
+                    <div>
+                        <p><img src="/img/tech/vscode.png" alt="Skill"></p>
+                        <p>VS Code</p>
+                    </div>
                 </li>
             </ul>
         </div>
