--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <p class="title">Additional passions</p>
         <ul>
             <li>
-                <div><img src="/img/Developer activity-amico.png" alt="Front-End Developer"></div>
+                <div><img src="img/Developer activity-amico.png" alt="Front-End Developer"></div>
                 <p>
                     <span><strong>Front-End</strong>Developer</span><br>
                     <span>(Bootstrap, Jquery, VueJs, ReactJS)</span>
@@ -255,163 +255,163 @@
             <ul>
                 <li>
                     <div>
-                        <p><img src="/img/tech/html.png" alt="html.png"></p>
+                        <p><img src="img/tech/html.png" alt="html.png"></p>
                         <p>HTML5</p>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <p><img src="/img/tech/css.png" alt="Skill"></p>
+                        <p><img src="img/tech/css.png" alt="Skill"></p>
                         <p>CSS3</p>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <p><img src="/img/tech/sass.png" alt="Skill"></p>
+                        <p><img src="img/tech/sass.png" alt="Skill"></p>
                         <p>Sass</p>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <p><img src="/img/tech/js.png" alt="Skill"></p>
+                        <p><img src="img/tech/js.png" alt="Skill"></p>
                         <p>Javascript</p>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <p><img src="/img/tech/bootstrap.png" alt="Skill"></p>
+                        <p><img src="img/tech/bootstrap.png" alt="Skill"></p>
                         <p>Bootstrap5</p>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <p><img src="/img/tech/jquery.png" alt="Skill"></p>
+                        <p><img src="img/tech/jquery.png" alt="Skill"></p>
                         <p>Jquery</p>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <p><img src="/img/tech/vue.png" alt="Skill"></p>
+                        <p><img src="img/tech/vue.png" alt="Skill"></p>
                         <p>VueJs3</p>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <p><img src="/img/tech/react.png" alt="Skill"></p>
+                        <p><img src="img/tech/react.png" alt="Skill"></p>
                         <p>ReactJs</p>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <p><img src="/img/tech/npm.png" alt="Skill"></p>
+                        <p><img src="img/tech/npm.png" alt="Skill"></p>
                         <p>NPM</p>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <p><img src="/img/tech/nodejs.png" alt="Skill"></p>
+                        <p><img src="img/tech/nodejs.png" alt="Skill"></p>
                         <p>Nodejs</p>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <p><img src="/img/tech/mysql.png" alt="Skill"></p>
+                        <p><img src="img/tech/mysql.png" alt="Skill"></p>
                         <p>MySQL</p>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <p><img src="/img/tech/php.png" alt="Skill"></p>
+                        <p><img src="img/tech/php.png" alt="Skill"></p>
                         <p>PHP</p>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <p><img src="/img/tech/laravel.png" alt="Skill"></p>
+                        <p><img src="img/tech/laravel.png" alt="Skill"></p>
                         <p>Laravel</p>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <p><img src="/img/tech/composer.png" alt="Skill"></p>
+                        <p><img src="img/tech/composer.png" alt="Skill"></p>
                         <p>Composer</p>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <p><img src="/img/tech/postman.png" alt="Skill"></p>
+                        <p><img src="img/tech/postman.png" alt="Skill"></p>
                         <p>Postman</p>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <p><img src="/img/tech/git.png" alt="Skill"></p>
+                        <p><img src="img/tech/git.png" alt="Skill"></p>
                         <p>Git</p>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <p><img src="/img/tech/github.png" alt="Skill"></p>
+                        <p><img src="img/tech/github.png" alt="Skill"></p>
                         <p>Github</p>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <p><img src="/img/tech/gitlab.png" alt="Skill"></p>
+                        <p><img src="img/tech/gitlab.png" alt="Skill"></p>
                         <p>Gitlab</p>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <p><img src="/img/tech/docker.png" alt="Skill"></p>
+                        <p><img src="img/tech/docker.png" alt="Skill"></p>
                         <p>Docker</p>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <p><img src="/img/tech/azure.png" alt="Skill"></p>
+                        <p><img src="img/tech/azure.png" alt="Skill"></p>
                         <p>Micro Azure</p>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <p><img src="/img/tech/google-cloud.png" alt="Skill"></p>
+                        <p><img src="img/tech/google-cloud.png" alt="Skill"></p>
                         <p>Gg cloud</p>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <p><img src="/img/tech/webpack.png" alt="Skill"></p>
+                        <p><img src="img/tech/webpack.png" alt="Skill"></p>
                         <p>Webpack</p>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <p><img src="/img/tech/firebase.png" alt="Skill"></p>
+                        <p><img src="img/tech/firebase.png" alt="Skill"></p>
                         <p>Firebase</p>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <p><img src="/img/tech/python.png" alt="Skill"></p>
+                        <p><img src="img/tech/python.png" alt="Skill"></p>
                         <p>Python</p>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <p><img src="/img/tech/django.png" alt="Skill"></p>
+                        <p><img src="img/tech/django.png" alt="Skill"></p>
                         <p>Django</p>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <p><img src="/img/tech/anaconda.png" alt="Skill"></p>
+                        <p><img src="img/tech/anaconda.png" alt="Skill"></p>
                         <p>Anaconda</p>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <p><img src="/img/tech/vscode.png" alt="Skill"></p>
+                        <p><img src="img/tech/vscode.png" alt="Skill"></p>
                         <p>VS Code</p>
                     </div>
                 </li>
